--- a/optimisation/momentum_rms_handsOn.ipynb
+++ b/optimisation/momentum_rms_handsOn.ipynb
@@ -253,8 +253,7 @@
    "metadata": {},
    "source": [
     "define function named initialize_parameters_deep() to initialize weights and bias for each layer\n",
-    "- Use tf.get_variable to initialise weights and bias, set datatype as float64\n",
-    "- Make sure you are using xavier initialization for weigths and initialize bias to zeros\n",
+    "- Use tf.random_normal() to initialise weights and tf.zeros() to initialise bias. Set datatype as float64\n",
     "- Parameters - layer_dims\n",
     "- Returns - dictionary of weights and bias"
    ]
